--- a/.config/i3/config
+++ b/.config/i3/config
@@ -159,7 +159,7 @@ bindsym $mod+Shift+9 move container to workspace $ws9
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+q exec dm-logout
+bindsym $mod+Shift+q exec dm-logout -r
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
